--- a/responsive-four-card/style.css
+++ b/responsive-four-card/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap');
+
 :root {
     --primary-red : hsl(0, 78%, 62%);
     --primary-cyan: hsl(180, 62%, 55%);
@@ -7,5 +9,133 @@
     --neutral-very-dark-blue: hsl(234, 12%, 34%);
     --neutral-grayish-blue: hsl(229, 6%, 66%);
     --neutral-very-light-gray: hsl(0, 0%, 98%);
+
+}
+
+*{
+    margin: 0;
+}
+html{
+    font-size: 15px;
+    font-family: 'Poppins', serif;
+} 
+.wrapper{
+    display: flex;
+    justify-content: center;
+}
+
+.main{
+    width: 100%;
+    max-width: 1440px;
+    height: auto;
+}
+
+.featured-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 2rem 0;
+    width: 100%;
+    gap: .06rem;
+    color: var(--neutral-very-dark-blue);
+}
+
+.featured-wrapper * {
+    max-width: 38vw;
+}
+
+.featured-wrapper > #section-title {
+    font-weight: 200;
+}
     
+.featured-wrapper > p {
+    color: var(--neutral-grayish-blue);
+}
+
+.features{
+    padding: 0 2rem;
+    margin-top: 2rem;
+}
+.features > .cards{
+    width: 100%;
+    display: grid;
+    gap: 2rem;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+}
+
+.features > .cards section{
+    display: flex;
+    flex-direction: column;
+    gap: .6rem;
+    padding: 1.5rem 2rem;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 25px 20px 0 #7ca9e163;;
+    background-color: white;
+}
+
+.features > .cards section > .card-description{
+    color: var(--neutral-grayish-blue);
+}
+.features > .cards section > div{
+    text-align: end;
+    margin-top: 1rem;
+}
+
+.card-team{
+    grid-column: 3/5;
+    grid-row: 1/3;
+    border-top: 5px solid var(--primary-red);
+}
+
+.card-calculator{
+    grid-column: 3/5;
+    grid-row: 3/5;
+    border-top: 5px solid var(--primary-orange);
+}
+.card-supervisor{
+    grid-column: 1/3;
+    grid-row: 2/4;
+    border-top: 5px solid var(--primary-cyan);
+}
+.card-karma{
+    grid-column: 5/7;
+    grid-row: 2/4;
+    border-top: 5px solid var(--primary-blue);
+}
+
+@media only screen and (max-width: 375px) {
+    .main{
+        margin-top: 2rem;
+    }
+    .featured-wrapper {
+        padding: 0 1rem;
+    }
+    .featured-wrapper > p {
+        margin-top: 1rem;
+    }
+    .featured-wrapper * {
+        max-width: 100%;
+    }
+
+    .features{
+        padding: 0 1rem;
+        margin-top: 1.3rem;
+        width: 100%;
+    }
+    .features > .cards{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+
+    }
+
+    footer{
+        margin-top: 2rem;
+        padding-bottom: 2rem;
+    }
 }
