--- a/landing-sunny/style.css
+++ b/landing-sunny/style.css
@@ -20,6 +20,14 @@
 *{
     margin: 0;
 }
+ul{
+    padding: 0;
+}
+
+li{
+    text-decoration: none;
+    list-style: none;
+}
 
 html{
     font-size: 18px;
@@ -211,3 +219,75 @@ html{
     font-size: 2rem;
 }
 
+
+
+.client-testimonial{
+    text-align: center;
+}
+.client-testimonial > .font-title{
+    letter-spacing: 6px;
+
+}
+
+.list-testimonial{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.testimonial-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+}
+.testimonial-card > img{
+    border-radius: 50px;
+    width: 60px;
+}
+.testimonial-card > p{
+    line-height: 1.5rem;
+    color: var(--very-dark-grayish-blue);
+}
+
+.testimonial-card__name{}
+.testimonial-card__name > .font-title{
+    font-weight: 700;
+}
+.testimonial-card__name > p{
+    margin-bottom: .5rem;
+}
+
+.testimonial-card__name__title-job{
+    color: var(--grayish-blue);
+}
+
+
+
+/* galery */
+#gallery{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+#gallery img{
+    width: 100%;
+}
+
+
+footer{
+    display: flex;
+    flex-direction: column;
+    gap: 1.4rem;
+    text-align: center;
+    background-color: var(--Dark-moderate-cyan);
+    padding: 3rem 1rem;
+}
+
+footer ul{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
